# REC-20-20-BharathKumar---Code-Assesment

agent-starter-react-main/: .env.example  app-config.ts  package.json  pnpm-lock.yaml
agent-starter-react-main/app/: layout.tsx
agent-starter-react-main/components/app/: welcome-view.tsx
agent-starter-react-main/styles/: globals.css
livekit-voice-agent/: .env.local  agent.py  prompts.py  pyproject.toml
