[project]
name = "livekit-voice-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "livekit-agents[bey,silero,turn-detector]~=1.2",
    "livekit-plugins-ai-coustics>=0.3.0",
    "livekit-plugins-noise-cancellation~=0.2",
    "pinecone-plugin-interface>=0.0.7",
    "python-dotenv>=1.2.2",
]
